--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
             </nav>
         </div>
     </header>
-    
+    <main>
+        <section id="portada">
+            <h1>Sube de MMR <br>Rapido</h1>
+        </section>
+
+        <section id="info">
+            <div class="container">
+                <div class="img-container"></div>
+                <div class="texto">
+
+                    <h2>Somos <span class="color-acento">Jofran Boost!</span></h2>
+                    <p>¿Por qué debería elegir Jofran Boost? Garantizamos el 100% de confiabilidad y seguridad de los
+                        datos de su cuenta. El servicio más rápido de todos los tiempos.</p>
+                    <ul>
+                        <li>☑ Precios accesibles</li>
+                        <li>☑ Confiabilidad</li>
+                        <li>☑ Soporte 24/7</li>
+                    </ul>
+                </div>
+            </div>
+
+        </section>
+        
 </body>
 
 </html>
