--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div class="img-container"></div>
                 <div class="texto">
 
-                    <h2>Somos <span class="color-acento">Jofran Boost!</span></h2>
-                    <p>¿Por qué debería elegir Jofran Boost? Garantizamos el 100% de confiabilidad y seguridad de los
+                    <h2>Somos <span class="color-acento">JH Boost!</span></h2>
+                    <p>¿Quieres subir tu MMR? Te ayudamos, garantizamos el 100% de confiabilidad y seguridad de los
                         datos de su cuenta. El servicio más rápido de todos los tiempos.</p>
                     <ul>
                         <li>☑ Precios accesibles</li>
