--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <a href="#acerca de mi">Quienes Somos</a>
                 <a href="caracteriticas">Caracteristicas </a>
-                <a href="#contactos">Contactos</a>
+                <a href="#contactos">Contacto</a>
             </nav>
         </div>
     </header>
