--- a/index.html
+++ b/index.html
@@ -11,35 +11,74 @@
         <div class="container">
             <p class="logo">JH Boost</p>
             <nav>
-                <a href="#acerca de mi">Quienes Somos</a>
-                <a href="caracteriticas">Caracteristicas </a>
+                <a href="#home">Home</a>
+                <a href="#quienes_somos">Quienes Somos</a>
+                <a href="#clases">Clases </a>
                 <a href="#contactos">Contacto</a>
             </nav>
         </div>
     </header>
     <main>
-        <section id="portada">
+        <section id="home">
             <h1>Sube de MMR <br>Rapido</h1>
         </section>
 
-        <section id="info">
+        <section id="quienes_somos">
             <div class="container">
-                <div class="img-container"></div>
                 <div class="texto">
 
                     <h2>Somos <span class="color-acento">JH Boost!</span></h2>
                     <p>¿Quieres subir tu MMR? Te ayudamos, garantizamos el 100% de confiabilidad y seguridad de los
                         datos de su cuenta. El servicio más rápido de todos los tiempos.</p>
-                    <ul>
-                        <li>☑ Precios accesibles</li>
-                        <li>☑ Confiabilidad</li>
-                        <li>☑ Soporte 24/7</li>
-                    </ul>
+                        <ul>
+                            <li>☑ Precios accesibles</li>
+                            <li>☑ Confiabilidad</li>
+                            <li>☑ Soporte 24/7</li>
+                        </ul>
                 </div>
             </div>
 
         </section>
-        <section id="formulario">
+        <section id="clases">
+            <div class="container">
+                <h2>Clases en vivo</h2>
+                <p>Sigue mis clases de Dota en vivo a traves de mi <a href="#">FanPage de Facebook</a>, donde juego con cuentas de mis clientes y los fines de semana enseño como jugar en 7K.</p>
+                <table border="1">
+                    <caption>HORARIO DE COACH</caption>
+                    <thead>
+                        <tr>
+                            <th>HORAS</th>
+                            <th>L</th>
+                            <th>M</th>
+                            <th>J</th>
+                            <th>S</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>4:00pm - 6:00pm</td>
+                        <td>1k-MMR</td>                        
+                        <td>4.2k-MMR-Ancestro</td>                  
+                        <td>5.1k-MMR-inmportal</td>
+                        <td>7k-MMR-inmortal</td>
+                      </tr>
+                    <tr>
+                    <td>6:00 pm - 8:00pm</td>
+                      <td>2.2k-MMR</td>
+                      <td>4.6k-MMR-Ancestro</td>
+                      <td>5.3k-MMR-inmportal</td>
+                      <td>7k-MMR-inmortal</td>
+                    </tr>
+                    <tr>
+                      <td>8:00pm - 11:00 pm</td>
+                      <td>2.9k-MMR</td>
+                      <td>4.9k-MMR-Ancestro</td>
+                      <td>5.7k-MMR-inmportal</td>
+                      <td>7k-MMR-inmortal</td>
+                    </tr>
+                  </table>
+            </div>
+        </section>
+        <section id="contactos">
             <div class="container">
                 <h2>Contacto</h2>
                 <form action="/">
@@ -56,7 +95,7 @@
                         <option value="primaria">Arconte</option>
                         <option value="primaria">Leyenda</option>
                         <option value="primaria">Ancestro</option>
-                        <option value="inicial">Inmportal</option>
+                        <option value="inicial">Inmortal</option>
                     </select>
                     <hr />
                     <textarea placeholder="Mensaje" name="mensaje" cols="30" rows="10" required></textarea>
@@ -66,10 +105,9 @@
                 </form>
             </div>
         </section>
-        <footer>
-            <div class="container">
-                <p>&copy; Jofran Boost - 2022</p>
-            </div>
+
+        <footer class="footer">
+            <a href="#">© 2022 Jh Boost</a>
         </footer>
 </body>
 
