--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="es">
 
 <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Servicio de boosting - Jh Boost" />
+    <meta name="description" content="Web Servicio de boosting" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://github.com/Jofran8/reto01.github.io" />
+    <meta property="og:title" content="Servicio de boosting - Jh Boost" />
+    <meta property="og:description"
+        content="Web Servicio de boosting"/>
+    <meta property="og:image"
+        content="https://github.com/Jofran8/reto01.github.io/blob/master/media/x.png" />
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url"
+        content="https://github.com/Jofran8/reto01.github.io" />
+    <meta property="twitter:title" content="Servicio de boosting - Jh Boost" />
+    <meta property="twitter:description" content="Web Servicio de boosting" />
+    <meta property="twitter:image"content="https://github.com/Jofran8/reto01.github.io/blob/master/media/x.png" />
+    <meta name="title" content="Servicio de boosting - Jh Boost" />
     <title>Dota 2 Boost</title>
     <link rel="stylesheet" href="index.css">
 </head>
